--- a/alpine.yaml
+++ b/alpine.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: alpine
     spec:
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       containers:
       - name: alpine
         image: alpine
