--- a/ubuntu.yaml
+++ b/ubuntu.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: ubuntu
     spec:
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       containers:
       - name: ubuntu
         image: ubuntu
